--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </h1>
 
         <a class="pwit" href="https://instagram.com/knitskileaks" target="blank">Instagram</a>
-        <a class="pwit" href="https://www.ravelry.com/bundles/asian--azn-diaspora-designers" target="blank">asian + azn diaspora designers on Ravelry</a>
-        <a class="pwit" href="https://www.pinterest.com/buwanbyul/if-a-man-talks-knit-then-i-owe-him-nothing/" target="blank">Pinterest</a>
         <a class="pwit" href="https://www.ravelry.com/people/knitskileaks" target="blank">Ravelry</a>
-        <a class="pwit" href="https://kathryndelarosa.com/astrology" target="blank">PISCESCOPES</a>
+        <a class="pwit" href="https://www.ravelry.com/bundles/azn--diaspora-designers" target="blank">azn + diaspora designers bundle</a>
+        <a class="pwit" href="https://www.pinterest.com/buwanbyul/if-a-man-talks-knit-then-i-owe-him-nothing/" target="blank">Pinterest</a>
+        <a class="pwit" href="https://tinyletter.com/piscescopes" target="blank">PISCESCOPES</a>
 
     <h2><a href="/">&larr; main</a></h2>
 </body>
